@@ -1,0 +1,40 @@
+/*--------------------------------*- C++ -*----------------------------------*\
+  | =========                 |                                                 |
+  | \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
+  |  \\    /   O peration     | Version:  5.0                                   |
+  |   \\  /    A nd           | Web:      www.OpenFOAM.com                      |
+  |    \\/     M anipulation  |                                                 |
+  \*---------------------------------------------------------------------------*/
+FoamFile
+{
+  version     2.0;
+  format      ascii;
+  class       dictionary;
+  location    "constant";
+  object      transportProperties;
+}
+// * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
+
+thetamin	thetamin [0 0 0 0 0 0 0]	0.102;
+thetamax	thetamax [0 0 0 0 0 0 0]	0.368;
+	
+phase.theta
+{
+  rho	rho [1 -3 0 0 0 0 0] 	1e3;
+  mu	mu [1 -1 -1 0 0 0 0]	1e-3;
+}
+
+relativePermeabilityModel  VanGenuchten;
+
+capillarityModel	VanGenuchten;
+
+VanGenuchtenCoeffs
+{   
+    m	0.5;
+    alpha 3.35;
+}
+
+wellboreProperties
+{}
+
+// ************************************************************************* //
