@@ -15,4 +15,5 @@ tutorials = [{'solver' : "impesFoam", 'case' : "Buckley-Leverett/BrooksAndCorey"
              {'solver' : "porousScalarTransportFoam", 'case' : "alphaDispersion"}, \
              {'solver' : "groundwater2DFoam", 'case' : "1Dwave_hFixed"}, \
              {'solver' : "groundwater2DFoam", 'case' : "1Dwave_UFixed"}, \
-             {'solver' : "stationaryGroundwater2DFoam", 'case' : "1Dwave_hFixed"}]
+             {'solver' : "stationaryGroundwater2DFoam", 'case' : "1Dwave_hFixed"}, \
+             {'solver' : "stationaryGroundwaterFoam", 'case' : "1Dinfiltration_Ufixed"}]
